@@ -1,1 +1,1 @@
-DIST libsodium-0.4.2.tar.gz 179525 SHA256 f1c0eaad853924e16bdb58471f5cc16c9c2c29cba78b59aab85c948f16acf183 SHA512 7d59ad433dc2724d62dd1b9192f1c580cd89a190d5d82851a524e814b08debd8e4e8f0c8e907567e9e733b8c74b13410253a7ac2ff178c11c9f0d6076e2dce2f WHIRLPOOL 8bd104a1685200cd500f283e3934732caaab7834c4b09ea083e3cb59f5549080474b6bc807fc64b8b15e6948b552faf87d9613cd04ef5afe488973dd911cebd6
+DIST libsodium-0.4.2.tar.gz 502753 SHA256 1a7901cdd127471724e854a8eb478247dc0ca67be549345c75fc6f2d4e05ed39 SHA512 1dd1167e88ebf68e3c13e7d317c871dfc3f1d7f6632c03e1db0934a5d0e8c2fe1db442231d09c2a8837b3c9b50fc0406594cff24104bc75c5209d7c0708352ff WHIRLPOOL abc7575c324cda7ed5147327b7d3085b8b85df9333947264915370861d22af9d015769d17592ac16667191c79a98c98be8a1a5c2d147bbd38c9e93c1f021b004
