@@ -4,18 +4,23 @@
 
 EAPI=5
 
-inherit flag-o-matic autotools
+inherit eutils
 
 DESCRIPTION="A portable fork of NaCl, a higher-level cryptographic library"
 HOMEPAGE="https://github.com/jedisct1/libsodium"
-SRC_URI="https://github.com/jedisct1/${PN}/archive/${PV}.tar.gz -> ${P}.tar.gz"
+SRC_URI="https://download.libsodium.org/${PN}/releases/${P}.tar.gz"
 
 LICENSE="ISC"
 SLOT="0"
-KEYWORDS="~amd64"
-IUSE=""
+KEYWORDS="~amd64 ~x86"
+IUSE="+asm +urandom"
 
 src_prepare() {
-	eautoreconf
 	epatch "${FILESDIR}"/${P}-fix-stack.patch
+}
+
+src_configure() {
+		econf \
+			$(use_enable asm) \
+			$(use_enable !urandom blocking-random)
 }
