@@ -1,3 +1,9 @@
+*libsodium-0.4.2-r1 (05 Aug 2013)
+
+  05 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.4.2-r1.ebuild,
+  -libsodium-0.4.2.ebuild, metadata.xml:
+  Changing to libsodium.org tarballs, various improvements. Thanks to chithanh
+
 *libsodium-0.4.2 (04 Aug 2013)
 
   04 Aug 2013; Manuel Rüger <mrueg@gentoo.org>
